# dab-lakehouse-boilerplate

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bundle_config_schema.json  databricks.yml  punch_config.py  pyproject.toml
.github/workflows/: dab_lakehouse_cd.yml  dab_lakehouse_ci.yml
resources/: dab_boilerplate_job.yml
src/dab_boilerplate/: __init__.py
src/dab_boilerplate/core/: constants.py  logger.py  spark_common.py
src/dab_boilerplate/data/: generate_configdata.py  generate_sensordata.py
src/dab_boilerplate/data/sample_data/: config_data_.json  sample_data_2024-03-23 18:05:40.718892.json
src/dab_boilerplate/db/: common_functions.py
src/dab_boilerplate/env_setup/: env_setup.py
src/dab_boilerplate/lakehouse/bronze/: bronze_layer.py
src/dab_boilerplate/lakehouse/gold/: gold_layer.py
src/dab_boilerplate/lakehouse/silver/: silver_layer.py
src/tests/: env_setup_backuptest.py
src/tests/lakehouse/: bronze_layer_test.py  gold_layer_test.py  silver_layer_test.py
